[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iss_patcher"
authors = [{name = "Krzysztof Polanski, Lijiang Fei", email = "kp9@sanger.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "scipy>=1.6.0",
    "numpy",
    "pandas",
    "anndata",
    "scanpy",
    "annoy"
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/Teichlab/iss_patcher"
